--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -1,3 +1,5 @@
+name: PHPCS
+
 on: [push]
 
 jobs:
@@ -16,13 +18,13 @@ jobs:
         extensions: mbstring
 
     - name: Install Composer dependencies
-      run: composer install --no-progress --prefer-dist --no-interaction
+      run: composer install --no-progress --prefer-dist --no-interaction --working-dir=/home/runner/work/drupal10/
 
     - name: Install PHP CodeSniffer
       run: composer global require "squizlabs/php_codesniffer=*"
 
     - name: Run PHPCS
-      run: ~/.composer/vendor/bin/phpcs --standard=Drupal src/ # Update the path and standard as needed
+      run: ~/.composer/vendor/bin/phpcs --standard=PSR12 app/src/ # Update the path and standard as needed
 
     - name: Upload PHPCS report
       if: failure()
