--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Validate composer.json and composer.lock
+    - name: Validate composer.json and composer.lock ${{ github.workspace }}
       run: composer validate
     - name: Cache Composer packages
       id: composer-cache
